--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ POSTGRES_NON_ROOT_PASSWORD=qwerty
 
 # The full domain name to host the application, usually your primary domain
 # Make sure it matches the DNS and SSL setup for correct routing and HTTPS access
-DOMAIN_NAME=n8n.sumcalculators.com
+DOMAIN_NAME=sumcalculators.com
 
 # Subdomain on which the app (n8n) will be served. This should be created in your DNS panel.
 # Final app URL will be: https://n8n.sumcalculators.com
